# syno

./: Cargo.toml  bun.lockb  index.ts  package.json
.github/workflows/: ci.yml
src/: main.rs
