[package]
name = "syno"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
